예외처리 수행. 및 로그 정리.